--- a/src/pages/Contact/Contact.module.css
+++ b/src/pages/Contact/Contact.module.css
@@ -9,7 +9,11 @@
 .section_container {
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
+  min-height: 350px;
+}
+
+.section_container > h2 {
+  margin-bottom: 25px;
 }
 
 .text_section {
@@ -28,6 +32,7 @@
   .section_container {
     flex-direction: row;
     margin-top: 25px;
+    justify-content: space-between;
   }
 
   .text_section {
